--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,30 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.9",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.11",
     "react-grid-layout": "^1.4.4",
-    "recharts": "^2.10.3",
     "react-hook-form": "^7.49.2",
-    "zod": "^3.22.4",
-    "@tanstack/react-query": "^5.17.9",
-    "zustand": "^4.4.7",
-    "lucide-react": "^0.263.1",
-    "clsx": "^2.0.0",
+    "recharts": "^2.10.3",
     "tailwind-merge": "^2.2.0",
-    "react-error-boundary": "^4.0.11"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "10.4.16",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
-    "vite": "^5.4.10",
-    "tailwindcss": "3.4.1",
     "postcss": "8.4.33",
-    "autoprefixer": "10.4.16"
+    "tailwindcss": "3.4.1",
+    "vite": "^5.4.10"
   }
 }
